many changes and error handling
