# routes/administration.js
@@ -2,11 +2,10 @@ const routes = require('express').Router();
 
 const administrationController = require('../controllers/administration');
 
-
+routes.get('/', administrationController.findAllAdmin);
 routes.get('/:position', administrationController.findByPosition);
 routes.post('/', administrationController.createAdministration);
 routes.put('/:administrationId', administrationController.updateAdministration);
 routes.delete('/:administrationId', administrationController.deleteAdministration);
 
-
-module.exports = routes; 
+module.exports = routes;
