# routes/events.js
@@ -5,8 +5,7 @@ const eventsController = require('../controllers/events');
 routes.get('/', eventsController.getAll);
 routes.get('/:eventName', eventsController.getByName);
 routes.post('/', eventsController.createEvent);
-routes.put('/:eventName', eventsController.updateEvent);
-routes.delete('/:eventName', eventsController.deleteEvent);
+routes.put('/:id', eventsController.updateEvent);
+routes.delete('/:id', eventsController.deleteEvent);
 
-
-module.exports = routes; 
+module.exports = routes;
