# swagger.json
@@ -22,33 +22,42 @@
         }
       }
     },
-    "/administration/{position}": {
+    "/api-docs": {
       "get": {
         "description": "",
+        "parameters": [],
+        "responses": {}
+      }
+    },
+    "/administration/": {
+      "get": {
+        "tags": [
+          "Administration"
+        ],
+        "summary": "Show all admins info",
+        "description": "Finds an admin members info based off their position",
         "produces": [
           "application/json"
         ],
-        "parameters": [
-          {
-            "name": "position",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
+        "parameters": [],
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
           }
         }
-      }
-    },
-    "/administration/": {
+      },
       "post": {
-        "description": "",
+        "tags": [
+          "Administration"
+        ],
+        "summary": "Add a new admin position to database",
+        "description": "Enter new admin positions information to add to database",
         "parameters": [
           {
             "name": "body",
@@ -65,10 +74,10 @@
                 "address": {
                   "example": "any"
                 },
-                "email": {
+                "phoneNumber": {
                   "example": "any"
                 },
-                "phoneNumber": {
+                "email": {
                   "example": "any"
                 },
                 "position": {
@@ -88,9 +97,44 @@
         }
       }
     },
+    "/administration/{position}": {
+      "get": {
+        "tags": [
+          "Administration"
+        ],
+        "summary": "Show an admins info based off position",
+        "description": "Finds an admin members info based off their position",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "position",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/administration/{administrationId}": {
       "put": {
-        "description": "",
+        "tags": [
+          "Administration"
+        ],
+        "summary": "Update an admins info based off id",
+        "description": "Changes an admin members info based off their position",
         "parameters": [
           {
             "name": "administrationId",
@@ -113,13 +157,13 @@
                 "address": {
                   "example": "any"
                 },
-                "email": {
-                  "example": "any"
-                },
                 "phoneNumber": {
                   "example": "any"
                 },
-                "birthday": {
+                "email": {
+                  "example": "any"
+                },
+                "position": {
                   "example": "any"
                 }
               }
@@ -130,13 +174,20 @@
           "204": {
             "description": "No Content"
           },
+          "400": {
+            "description": "Bad Request"
+          },
           "500": {
             "description": "Internal Server Error"
           }
         }
       },
       "delete": {
-        "description": "",
+        "tags": [
+          "Administration"
+        ],
+        "summary": "Delete an admins info based off id",
+        "description": "Deletes an admin members info based off their position",
         "parameters": [
           {
             "name": "administrationId",
@@ -146,8 +197,11 @@
           }
         ],
         "responses": {
-          "204": {
-            "description": "No Content"
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
@@ -157,7 +211,11 @@
     },
     "/users/{username}": {
       "get": {
-        "description": "",
+        "tags": [
+          "Users"
+        ],
+        "summary": "Show users info based off username",
+        "description": "Show users email and hashed password based off username",
         "produces": [
           "application/json"
         ],
@@ -173,39 +231,22 @@
           "200": {
             "description": "OK"
           },
+          "400": {
+            "description": "Bad Request"
+          },
           "500": {
             "description": "Internal Server Error"
           }
         }
-      },
-      "put": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "username",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {}
-      },
-      "delete": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "username",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {}
       }
     },
     "/users/": {
       "post": {
-        "description": "",
+        "tags": [
+          "Users"
+        ],
+        "summary": "Create a new user",
+        "description": "Create a users email and hashed password",
         "parameters": [
           {
             "name": "body",
@@ -233,9 +274,82 @@
         }
       }
     },
+    "/users/{id}": {
+      "put": {
+        "tags": [
+          "Users"
+        ],
+        "summary": "Update a users info based off id",
+        "description": "Update a users email and hashed password based off id",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "username": {
+                  "example": "any"
+                },
+                "password": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Users"
+        ],
+        "summary": "Delete a user",
+        "description": "Delete a users email and hashed password",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/members/": {
       "get": {
-        "description": "",
+        "tags": [
+          "Members"
+        ],
+        "summary": "Show all members info",
+        "description": "Shows all members info",
         "produces": [
           "application/json"
         ],
@@ -244,13 +358,20 @@
           "200": {
             "description": "OK"
           },
+          "400": {
+            "description": "Bad Request"
+          },
           "500": {
             "description": "Internal Server Error"
           }
         }
       },
       "post": {
-        "description": "",
+        "tags": [
+          "Members"
+        ],
+        "summary": "Create a new member",
+        "description": "Fill in new members info to create a new member",
         "parameters": [
           {
             "name": "body",
@@ -295,7 +416,11 @@
     },
     "/members/{memberId}": {
       "get": {
-        "description": "",
+        "tags": [
+          "Members"
+        ],
+        "summary": "Get member info based off id",
+        "description": "Show a members info based off id",
         "produces": [
           "application/json"
         ],
@@ -311,13 +436,20 @@
           "200": {
             "description": "OK"
           },
+          "400": {
+            "description": "Bad Request"
+          },
           "500": {
             "description": "Internal Server Error"
           }
         }
       },
       "put": {
-        "description": "",
+        "tags": [
+          "Members"
+        ],
+        "summary": "Update member info based off id",
+        "description": "Update member info based off id",
         "parameters": [
           {
             "name": "memberId",
@@ -326,10 +458,24 @@
             "type": "string"
           }
         ],
-        "responses": {}
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
       },
       "delete": {
-        "description": "",
+        "tags": [
+          "Members"
+        ],
+        "summary": "Delete member info based off id",
+        "description": "Delete member info based off id",
         "parameters": [
           {
             "name": "memberId",
@@ -338,12 +484,26 @@
             "type": "string"
           }
         ],
-        "responses": {}
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
       }
     },
     "/events/": {
       "get": {
-        "description": "",
+        "tags": [
+          "Events"
+        ],
+        "summary": "Show all events info",
+        "description": "Displays all events info",
         "produces": [
           "application/json"
         ],
@@ -352,13 +512,20 @@
           "200": {
             "description": "OK"
           },
+          "400": {
+            "description": "Bad Request"
+          },
           "500": {
             "description": "Internal Server Error"
           }
         }
       },
       "post": {
-        "description": "",
+        "tags": [
+          "Events"
+        ],
+        "summary": "Create an event",
+        "description": "Fill in event info to create event",
         "parameters": [
           {
             "name": "body",
@@ -400,7 +567,11 @@
     },
     "/events/{eventName}": {
       "get": {
-        "description": "",
+        "tags": [
+          "Events"
+        ],
+        "summary": "Show event info based off title",
+        "description": "Displays event info based off title",
         "produces": [
           "application/json"
         ],
@@ -416,39 +587,76 @@
           "200": {
             "description": "OK"
           },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/events/{id}": {
+      "put": {
+        "tags": [
+          "Events"
+        ],
+        "summary": "Update event info based off id",
+        "description": "Update event info based off id",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
           "500": {
             "description": "Internal Server Error"
           }
         }
       },
-      "put": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "eventName",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {}
-      },
       "delete": {
-        "description": "",
+        "tags": [
+          "Events"
+        ],
+        "summary": "Delete event info based off id",
+        "description": "Delete event info based off id",
         "parameters": [
           {
-            "name": "eventName",
+            "name": "id",
             "in": "path",
             "required": true,
             "type": "string"
           }
         ],
-        "responses": {}
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
       }
     },
     "/volunteers/": {
       "get": {
-        "description": "",
+        "tags": [
+          "Volunteers"
+        ],
+        "summary": "Show all volunteer info",
+        "description": "See all volunteer info",
         "produces": [
           "application/json"
         ],
@@ -457,13 +665,20 @@
           "200": {
             "description": "OK"
           },
+          "400": {
+            "description": "Bad Request"
+          },
           "500": {
             "description": "Internal Server Error"
           }
         }
       },
       "post": {
-        "description": "",
+        "tags": [
+          "Volunteers"
+        ],
+        "summary": "Create new volunteer info",
+        "description": "Create new volunteer info",
         "parameters": [
           {
             "name": "body",
@@ -494,30 +709,89 @@
         }
       }
     },
-    "/volunteers/{username}": {
-      "put": {
-        "description": "",
+    "/volunteers/{event}": {
+      "get": {
+        "tags": [
+          "Volunteers"
+        ],
+        "summary": "Shows volunteer info based off event",
+        "description": "See volunteer info for each event based off event title",
+        "produces": [
+          "application/json"
+        ],
         "parameters": [
           {
-            "name": "username",
+            "name": "event",
             "in": "path",
             "required": true,
             "type": "string"
           }
         ],
-        "responses": {}
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/volunteers/{id}": {
+      "put": {
+        "tags": [
+          "Volunteers"
+        ],
+        "summary": "Update volunteer info",
+        "description": "Update volunteer info",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
       },
       "delete": {
-        "description": "",
+        "tags": [
+          "Volunteers"
+        ],
+        "summary": "Delete volunteer info",
+        "description": "Delete volunteer info",
         "parameters": [
           {
-            "name": "username",
+            "name": "id",
             "in": "path",
             "required": true,
             "type": "string"
           }
         ],
-        "responses": {}
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
       }
     }
   }
